--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Standard Express Server with Postgresql Support Babel and Webpack",
   "main": "server.js",
   "scripts": {
-    "start": "webpack --mode development --watch && nodemon --exec babel-node server.js --watch",
+    "start": "npm-run-all --parallel watch:dev watch:build",
+    "watch:dev": "nodemon --exec babel-node server.js",
+    "watch:build": "webpack --mode development --watch",
     "start-prod": "webpack && nodemon --exec babel-node server.js",
     "pm2server": "babel-node server.js",
     "build": "webpack --mode production",
@@ -21,6 +23,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.5.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
